# system

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CHARTER.md  CLAUDE.md  Cargo.toml  DESIGN.md  HANDBOOK_ENGINE_EXTRACTION_PLAN.md  ORCH_PLAN.md  PLAN.md  README.md  SCRATCH_PHASE6_REMAINING_WORK.md  SKILL.md  TODOS.md  justfile  substrate_gstack_pattern_synthesis_consolidated_2026-04-18 (1).json  substrate_gstack_pattern_synthesis_consolidated_2026-04-18 (1).md
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: author.rs  author_prompting.rs  doctor.rs  doctor_rendering.rs  exit_policy.rs  generate.rs  inspect.rs  main.rs  pipeline.rs  pipeline_help.rs  rendering.rs  request_shared.rs  setup.rs  shell_shared.rs
crates/cli/tests/: author_cli.rs  cli_surface.rs  feature_spec_contract.rs  help_drift_guard.rs  manual_qa_fixture_checkout.rs  pipeline_handoff_refusals.rs  pipeline_proof_corpus_support.rs
crates/cli/tests/snapshots/: handbook-author-charter-help.txt  handbook-author-environment-inventory-help.txt  handbook-author-help.txt  handbook-author-project-context-help.txt  handbook-doctor-help.txt  handbook-generate-help.txt  handbook-help.txt  handbook-inspect-help.txt  handbook-pipeline-capture-apply-help.txt  handbook-pipeline-capture-help.txt  handbook-pipeline-compile-help.txt  handbook-pipeline-handoff-emit-help.txt  handbook-pipeline-handoff-help.txt  handbook-pipeline-help.txt  handbook-pipeline-state-help.txt  handbook-setup-help.txt  handbook-setup-init-help.txt  handbook-setup-refresh-help.txt  system-author-charter-help.txt  system-author-environment-inventory-help.txt  system-author-help.txt  system-author-project-context-help.txt  system-doctor-help.txt  system-generate-help.txt  system-help.txt  system-inspect-help.txt  system-pipeline-capture-apply-help.txt  system-pipeline-capture-help.txt  system-pipeline-compile-help.txt  system-pipeline-handoff-emit-help.txt  system-pipeline-handoff-help.txt  system-pipeline-help.txt  system-pipeline-state-help.txt  system-setup-help.txt  system-setup-init-help.txt  system-setup-refresh-help.txt
crates/compiler/: Cargo.toml
crates/compiler/src/: artifact_manifest.rs  author.rs  baseline_validation.rs  blocker.rs  budget.rs  canonical_artifacts.rs  decision_log.rs  declarative_roots.rs  doctor.rs  doctor_shell.rs  error.rs  freshness.rs  layout.rs  lib.rs  packet_result.rs  pipeline.rs  pipeline_capture.rs  pipeline_compile.rs  pipeline_handoff.rs  pipeline_route.rs  profile_readiness.rs  refusal.rs  repo_file_access.rs  resolver.rs  route_state.rs  setup.rs  setup_shell.rs  stage_10_feature_spec_provenance.rs  template_library.rs
crates/compiler/src/author/: charter.rs  charter_core.rs  charter_shell.rs  environment_inventory.rs  environment_inventory_core.rs  environment_inventory_shell.rs  mod.rs  project_context.rs  project_context_core.rs  project_context_shell.rs
crates/compiler/src/rendering/: error.rs  inspect.rs  json.rs  markdown.rs  mod.rs  (+2 more)
crates/compiler/tests/: artifact_manifest_interface.rs  author.rs  canonical_artifacts_ingest.rs  doctor.rs  freshness_computation.rs  hcm_2_1_c04_version.rs  pipeline_capture.rs  pipeline_catalog.rs  pipeline_compile.rs  pipeline_handoff.rs  pipeline_loader.rs  pipeline_proof_corpus_support.rs  pipeline_route_resolution.rs  pipeline_state_store.rs  refusal_mapping.rs  rendering_surface.rs  resolver_core.rs  setup.rs
crates/engine/: Cargo.toml
crates/engine/src/: artifact_instance.rs  artifact_kind_registry.rs  artifact_manifest.rs  artifact_registry.rs  baseline_validation.rs  canonical_artifacts.rs  canonical_paths.rs  canonical_repo_support.rs  context_resolution_registry.rs  definition_identity.rs  freshness.rs  instance_profile.rs  lib.rs  profile_builtins.rs  profile_decision.rs  profile_inspection.rs  profile_selection.rs  project_condition_registry.rs  project_context_artifact.rs  schema_registry.rs  semantic_capability_registry.rs  stable_role_registry.rs  vocabulary_registry.rs
crates/engine/tests/: artifact_instances.rs  artifact_kind_registry.rs  artifact_manifest_interface.rs  author_core.rs  baseline_validation.rs  canonical_artifacts_ingest.rs  context_resolution_policies.rs  context_resolution_stack.rs  definition_identity.rs  freshness_computation.rs  hcm_1_1_custom_kind.rs  hcm_1_2_public_owner_api.rs  hcm_1_2_unselected_kinds.rs  hcm_1_3_artifact_registry.rs  hcm_1_4_profile_decisions.rs  hcm_1_4_profile_inspection.rs  hcm_2_1_project_context.rs  profile_artifact_schemas.rs  profile_context_schemas.rs  profile_layering.rs  profile_schema_shape.rs  profile_selection.rs  profile_work_decision_schemas.rs  project_condition_registry.rs  schema_registry.rs  semantic_capability_registry.rs  stable_role_registry.rs  vocabulary_registry.rs
crates/flow/: Cargo.toml
crates/flow/src/: budget.rs  lib.rs  packet_result.rs  resolver.rs
crates/flow/tests/: budget_domains.rs  resolver_core.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: declarative_roots.rs  layout.rs  lib.rs  pipeline.rs  pipeline_capture.rs  pipeline_compile.rs  pipeline_handoff.rs  pipeline_route.rs  repo_file_access.rs  route_state.rs  setup.rs  stage_10_feature_spec_provenance.rs
crates/pipeline/tests/: pipeline_capture.rs  pipeline_catalog.rs  pipeline_compile.rs  pipeline_handoff.rs  pipeline_loader.rs  pipeline_route_resolution.rs  pipeline_state_store.rs  pipeline_storage_layout_contract.rs  setup.rs
(+1002 files in other folders)
