[package]
name = "handbook-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "handbook"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
handbook-compiler = { path = "../compiler" }
handbook-engine = { path = "../engine" }
handbook-flow = { path = "../flow" }
handbook-pipeline = { path = "../pipeline" }

[dev-dependencies]
tempfile = "3"
