[package]
name = "handbook-compiler"
version = "0.1.0"
edition = "2021"

[lib]
name = "handbook_compiler"
path = "src/lib.rs"

[dependencies]
handbook-engine = { path = "../engine" }
handbook-flow = { path = "../flow" }
handbook-pipeline = { path = "../pipeline" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2.5.4"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tempfile = "3"
