[package]
name = "handbook-engine"
version = "0.1.1"
edition = "2021"
description = "Canonical artifact, freshness, and structured authoring core for Handbook."
repository = "https://github.com/atomize-hq/system.git"
documentation = "https://docs.rs/handbook-engine"
homepage = "https://github.com/atomize-hq/system.git"
license = "MIT"

[lib]
name = "handbook_engine"
path = "src/lib.rs"

[dependencies]
jsonschema = { version = "0.47.0", default-features = false }
libc = "0.2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3.2"
serde_yaml_bw = "2.5.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
