[package]
name = "handbook-flow"
version = "0.1.0"
edition = "2021"
description = "Resolver, packet-result, and budget runtime surfaces for Handbook."
repository = "https://github.com/atomize-hq/handbook"
documentation = "https://docs.rs/handbook-flow"
homepage = "https://github.com/atomize-hq/handbook"
license = "MIT"

[lib]
name = "handbook_flow"
path = "src/lib.rs"

[dependencies]
handbook-engine = { path = "../engine" }

[dev-dependencies]
tempfile = "3"
