[package]
name = "handbook-flow"
version = "0.1.1"
edition = "2021"
description = "Resolver, packet-result, and budget runtime surfaces for Handbook."
repository = "https://github.com/atomize-hq/system.git"
documentation = "https://docs.rs/handbook-flow"
homepage = "https://github.com/atomize-hq/system.git"
license = "MIT"

[lib]
name = "handbook_flow"
path = "src/lib.rs"

[dependencies]
handbook-engine = { version = "0.1.1", path = "../engine" }

[dev-dependencies]
tempfile = "3"
